--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,10 @@
         tools:targetApi="31">
         <activity
             android:name=".QuizResultados"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".QuizActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
