--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizzTech"
         tools:targetApi="31">
+
+        <activity android:name=".ActivityInicio"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".QuizResultados"
             android:exported="true" />
