--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.QuizzTech"
         tools:targetApi="31">
 
+
+        <activity android:name=".ActivityInicio"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+
+            </intent-filter>
+        </activity>
+
         <activity android:name=".ActivityLogin"
             android:exported="true">
             <intent-filter>
@@ -22,12 +32,11 @@
 
         </activity>
 
-        <activity android:name=".ActivityInicio"
+        <activity android:name=".RegistroActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
-
             </intent-filter>
         </activity>
 
